--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "babel-jest": "^24.7.0",
     "jest": "^24.7.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.4.3"
   }
 }
